# prometheus-cpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/hooks/: lint-check.sh
.claude/skills/prometheus-metrics/: SKILL.md
.claude/skills/prometheus-metrics/examples/: handler.cpp.example  labels.hpp.example  metrics.hpp.example
.claude/skills/prometheus-metrics/reference/: naming-conventions.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench.cpp  bench_comparison_main.cpp  bench_jupp0r.cpp  bench_stigsb.cpp
cmake/: Dependencies.cmake  prometheus-client-cpp-config.cmake.in
dev/bench/arm64/: data.js
dev/bench/x64/: data.js
docs/: ARCHITECTURE.md  MIGRATION_FROM_JUPP0R.md
examples/: CMakeLists.txt  basic_usage.cpp  http_server_example.cpp
include/prometheus/: counter.hpp  gauge.hpp  histogram.hpp  label_def.hpp  label_mask.hpp  metric_family.hpp  metric_family_builder.hpp  prometheus.hpp  registry.hpp  text_serializer.hpp  unit.hpp
include/prometheus/detail/: assert.hpp  cache_line.hpp  check_names.hpp  label_key.hpp  metric_store.hpp
scripts/: run-clang-tidy-precommit.sh
tests/: CMakeLists.txt  test_check_names.cpp  test_concurrency.cpp  test_counter.cpp  test_gauge.cpp  test_histogram.cpp  test_label_def.cpp  test_metric_family.cpp  test_registry.cpp  test_text_serializer.cpp  test_unit.cpp
